--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -304,6 +304,7 @@ NVIC1.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC2.ForceEnableDMAVector=true
 NVIC2.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
